overflow mobile device issue patch 3 attempt

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,8 +6,9 @@
     font-family: 'Quicksand', sans-serif;
 }
 
-html, body, .site-wrapper{
+.site-wrapper{
     overflow-x: hidden;
+    position: relative;
 }
 
 body{
